# obsidian-school

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitmodules  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  package.json  pyproject.toml  requirements-dev.txt  setup.py
.github/: CODEOWNERS  FUNDING.yml  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md
.github/workflows/: auto-sync.yml  ci.yml  dependency-check.yml  docker.yml  python-test.yml  release.yml
scripts/: backup.sh  install-hooks.sh  sync.sh  verify.sh
templates/: daily-note.md  note.md
